docs/0.18.2/_sources/api/gammapy.maps.WcsMap.rst.txt
WcsMap
======

.. currentmodule:: gammapy.maps

.. autoclass:: WcsMap
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~WcsMap.data
      ~WcsMap.geom
      ~WcsMap.meta
      ~WcsMap.quantity
      ~WcsMap.tag
      ~WcsMap.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~WcsMap.apply_edisp
      ~WcsMap.coadd
      ~WcsMap.copy
      ~WcsMap.create
      ~WcsMap.crop
      ~WcsMap.downsample
      ~WcsMap.fill_by_coord
      ~WcsMap.fill_by_idx
      ~WcsMap.fill_by_pix
      ~WcsMap.fill_events
      ~WcsMap.from_geom
      ~WcsMap.from_hdulist
      ~WcsMap.from_images
      ~WcsMap.get_by_coord
      ~WcsMap.get_by_idx
      ~WcsMap.get_by_pix
      ~WcsMap.get_image_by_coord
      ~WcsMap.get_image_by_idx
      ~WcsMap.get_image_by_pix
      ~WcsMap.interp_by_coord
      ~WcsMap.interp_by_pix
      ~WcsMap.interp_to_geom
      ~WcsMap.iter_by_image
      ~WcsMap.pad
      ~WcsMap.plot_grid
      ~WcsMap.plot_interactive
      ~WcsMap.read
      ~WcsMap.reduce
      ~WcsMap.reduce_over_axes
      ~WcsMap.resample_axis
      ~WcsMap.set_by_coord
      ~WcsMap.set_by_idx
      ~WcsMap.set_by_pix
      ~WcsMap.slice_by_idx
      ~WcsMap.sum_over_axes
      ~WcsMap.to_cube
      ~WcsMap.to_hdu
      ~WcsMap.to_hdulist
      ~WcsMap.upsample
      ~WcsMap.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: data
   .. autoattribute:: geom
   .. autoattribute:: meta
   .. autoattribute:: quantity
   .. autoattribute:: tag
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: apply_edisp
   .. automethod:: coadd
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: crop
   .. automethod:: downsample
   .. automethod:: fill_by_coord
   .. automethod:: fill_by_idx
   .. automethod:: fill_by_pix
   .. automethod:: fill_events
   .. automethod:: from_geom
   .. automethod:: from_hdulist
   .. automethod:: from_images
   .. automethod:: get_by_coord
   .. automethod:: get_by_idx
   .. automethod:: get_by_pix
   .. automethod:: get_image_by_coord
   .. automethod:: get_image_by_idx
   .. automethod:: get_image_by_pix
   .. automethod:: interp_by_coord
   .. automethod:: interp_by_pix
   .. automethod:: interp_to_geom
   .. automethod:: iter_by_image
   .. automethod:: pad
   .. automethod:: plot_grid
   .. automethod:: plot_interactive
   .. automethod:: read
   .. automethod:: reduce
   .. automethod:: reduce_over_axes
   .. automethod:: resample_axis
   .. automethod:: set_by_coord
   .. automethod:: set_by_idx
   .. automethod:: set_by_pix
   .. automethod:: slice_by_idx
   .. automethod:: sum_over_axes
   .. automethod:: to_cube
   .. automethod:: to_hdu
   .. automethod:: to_hdulist
   .. automethod:: upsample
   .. automethod:: write
